study/output-fixed/ep_output/Mockito-32
/Users/stylethinking/Documents/StaticBugCheckers/defects4j/projects/f/Mockito-32/src/org/mockito/internal/configuration/SpyAnnotationEngine.java:29: warning: [MissingOverride] process implements method in AnnotationEngine; expected @Override
    public void process(Class<?> context, Object testClass) {
                ^
    (see http://errorprone.info/bugpattern/MissingOverride)
  Did you mean '@Override @SuppressWarnings("deprecation")'?
/Users/stylethinking/Documents/StaticBugCheckers/defects4j/projects/f/Mockito-32/src/org/mockito/internal/configuration/SpyAnnotationEngine.java:68: error: [GetClassOnClass] Calling getClass() on an object of type Class returns the Class object for java.lang.Class; you probably meant to operate on the object directly
                new Reporter().unsupportedCombinationOfAnnotations(annotation.getSimpleName(), annotation.getClass().getSimpleName());
                                                                                                                  ^
    (see http://errorprone.info/bugpattern/GetClassOnClass)
  Did you mean 'new Reporter().unsupportedCombinationOfAnnotations(annotation.getSimpleName(), annotation.getSimpleName());' or 'new Reporter().unsupportedCombinationOfAnnotations(annotation.getSimpleName(), Class.class.getSimpleName());'?
Note: /Users/stylethinking/Documents/StaticBugCheckers/defects4j/projects/f/Mockito-32/src/org/mockito/internal/configuration/SpyAnnotationEngine.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error
1 warning
